# rngs

./: .travis.yml  Cargo.lock.msrv  Cargo.toml  README.md  appveyor.yml
.github/workflows/: benches.yml  test.yml  workspace.yml
benches/: Cargo.toml  mod.rs
rand_chacha/: Cargo.toml  README.md
rand_hc/: CHANGELOG.md  Cargo.toml  README.md
rand_hc/src/: hc128.rs  lib.rs
rand_isaac/: CHANGELOG.md  Cargo.toml  README.md
rand_isaac/src/: array_serde.rs  isaac.rs  isaac64.rs  isaac_array.rs  lib.rs  serde_impl.rs
rand_jitter/: CHANGELOG.md  Cargo.toml  README.md
rand_jitter/benches/: jitter.rs  mod.rs
rand_jitter/src/: error.rs  hw_timers.rs  lib.rs  platform.rs
rand_jitter/tests/: mod.rs
rand_sfc/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
rand_sfc/src/: common.rs  lib.rs  sfc32.rs  sfc64.rs
rand_xorshift/: CHANGELOG.md  Cargo.toml  README.md
rand_xorshift/src/: lib.rs
rand_xorshift/tests/: mod.rs
rand_xoshiro/: CHANGELOG.md  Cargo.toml  README.md
rand_xoshiro/src/: common.rs  lib.rs  splitmix64.rs  xoroshiro128plus.rs  xoroshiro128plusplus.rs  xoroshiro128starstar.rs  xoroshiro64star.rs  xoroshiro64starstar.rs  xoshiro128plus.rs  xoshiro128plusplus.rs  xoshiro128starstar.rs  xoshiro256plus.rs  xoshiro256plusplus.rs  xoshiro256starstar.rs  xoshiro512plus.rs  xoshiro512plusplus.rs  xoshiro512starstar.rs
rand_xoshiro/tests/: serde.rs
utils/ci/: miri.sh  script.sh
