[workspace]
members = [
    "benches",
    "rand_jitter",
    "rand_isaac",
    "rand_xorshift",
    "rand_xoshiro",
    "rand_hc",
]

[workspace.package]
name = "rngs"
version = "0.0.0"
authors = ["The Rand Project Developers", "The Rust Project Developers"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/rust-random/rngs"
description = """
Extra random number generators
"""
edition = "2018"
