[package]
name = "benches"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
publish = false

[dev-dependencies]
criterion = "0.5.0"
criterion-cycles-per-byte = "0.6"
rand_core = { version = "0.9.0", features = ["os_rng"] }
rand_xoshiro = { path = "../rand_xoshiro", version = "0.7" }
rand_isaac = { path = "../rand_isaac", version = "0.4" }
rand_xorshift = { path = "../rand_xorshift", version = "0.4" }
rand_hc = { path = "../rand_hc", version = "0.4" }
rand_sfc = { path = "../rand_sfc", version = "0.1" }

[[bench]]
name = "mod"
path = "mod.rs"
harness = false
