[package]
name = "rand_isaac"
version = "0.3.0" # NB: When modifying, also modify html_root_url in lib.rs
authors = ["The Rand Project Developers", "The Rust Project Developers"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/rust-random/rngs"
documentation = "https://docs.rs/rand_isaac"
homepage = "https://rust-random.github.io/book"
description = """
ISAAC random number generator
"""
keywords = ["random", "rng", "isaac"]
categories = ["algorithms", "no-std"]
edition = "2018"

[features]
serde1 = ["serde", "rand_core/serde1"]
crypto = []

[dependencies]
rand_core = { version = "0.6" }
serde = { version = "1.0.103", features = ["derive"], optional = true }
# Not a direct dependency but required to boost the minimum version:
serde_derive = { version = "1.0.103", optional = true }

[dev-dependencies]
# This is for testing serde, unfortunately we can't specify feature-gated dev
# deps yet, see: https://github.com/rust-lang/cargo/issues/1596
bincode = "1.1.4"
