[package]
name = "rand_isaac"
version = "0.3.0" # NB: When modifying, also modify html_root_url in lib.rs
authors = ["The Rand Project Developers", "The Rust Project Developers"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/rust-random/rngs"
documentation = "https://docs.rs/rand_isaac"
homepage = "https://rust-random.github.io/book"
description = """
ISAAC random number generator
"""
keywords = ["random", "rng", "isaac"]
categories = ["algorithms", "no-std"]
edition = "2021"
rust-version = "1.63"

[features]
serde = ["dep:serde", "rand_core/serde"]

[dependencies]
rand_core = { version = "0.9.0" }
serde = { version = "1.0.104", features = ["derive"], optional = true }

[dev-dependencies]
# This is for testing serde, unfortunately we can't specify feature-gated dev
# deps yet, see: https://github.com/rust-lang/cargo/issues/1596
bincode = "1.1.4"
