[package]
name = "rand_isaac"
version = "0.5.0-rc.0"
authors = ["The Rand Project Developers", "The Rust Project Developers"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/rust-random/rngs"
documentation = "https://docs.rs/rand_isaac"
homepage = "https://rust-random.github.io/book"
description = """
ISAAC random number generator
"""
keywords = ["random", "rng", "isaac"]
categories = ["algorithms", "no-std"]
edition = "2024"
rust-version = "1.85"

[package.metadata.docs.rs]
all-features = true

[features]
serde = ["dep:serde", "dep:serde_arrays"]

[dependencies]
rand_core = "0.10.0-rc-3"
serde = { version = "1.0.104", features = ["derive"], optional = true }
serde_arrays = { version = "0.2.0", optional = true }

[dev-dependencies]
# This is for testing serde, unfortunately we can't specify feature-gated dev
# deps yet, see: https://github.com/rust-lang/cargo/issues/1596
postcard = {version = "1.1.3", default-features = false, features = ["alloc"] }
