[package]
name = "rand_sfc"
version = "0.2.0-rc.0"
authors = ["The Rand Project Developers"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-random/rngs"
documentation = "https://docs.rs/rand_sfc"
homepage = "https://rust-random.github.io/book"
description = "Sfc32 and Sfc64 random number generators"
keywords = ["random", "rng"]
categories = ["algorithms", "no-std"]
edition = "2024"
rust-version = "1.85"

[package.metadata.docs.rs]
all-features = true

[features]
serde = ["dep:serde"]

[dependencies]
rand_core = { version = "0.10.0-rc-2" }
serde = { version = "1.0.118", default-features = false, features = ["derive"], optional = true }
