[package]
name = "rand_xorshift"
version = "0.2.1"
authors = ["The Rand Project Developers", "The Rust Project Developers"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/rust-random/rngs"
documentation = "https://docs.rs/rand_xorshift"
homepage = "https://rust-random.github.io/book"
description = """
Xorshift random number generator
"""
keywords = ["random", "rng", "xorshift"]
categories = ["algorithms", "no-std"]
edition = "2018"

[badges]
travis-ci = { repository = "rust-random/rngs" }
appveyor = { repository = "rust-random/rngs" }

[features]
serde1 = ["serde"]

[dependencies]
rand_core = { version = "0.5" }
serde = { version = "1.0.118", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
# This is for testing serde, unfortunately we can't specify feature-gated dev
# deps yet, see: https://github.com/rust-lang/cargo/issues/1596
bincode = "1"
